<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white_alpha"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_medicines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/pills"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:clickable="true"
                android:text="@string/medicines"
                android:focusable="true"/>

            <Button
                android:id="@+id/health_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:drawableTop="@drawable/heartbeat"
                android:text="@string/health_index"
                android:focusable="true"/>

            <Button
                android:id="@+id/health_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/medical_journal"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:text="@string/health_profile"
                android:focusable="true"/>

            <Button
                android:id="@+id/planned_immunize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/syringe"
                android:padding="5dp"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:text="@string/planned_immunity"
                android:focusable="true"/>

            <Button
                android:id="@+id/btn_hospital_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/marker"
                android:padding="5dp"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:text="@string/hospital_map"
                android:focusable="true"/>

            <Button
                android:id="@+id/self_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/stethoscope"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:clickable="true"
                android:text="@string/self_help_registration"
                android:focusable="true"/>

            <Button
                android:id="@+id/service_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/nurse"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:clickable="true"
                android:text="@string/service_evaluation"
                android:focusable="true"/>

            <Button
                android:id="@+id/diagnose_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/tablet"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:theme="@style/WhiteButtonStyle"
                style="?attr/borderlessButtonStyle"
                android:clickable="true"
                android:text="@string/diagnosis_records"
                android:focusable="true"/>
        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@color/gray_light"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/app_red"
            android:background="@color/white"
            android:text="附近的医院"/>

        <!--<android.support.design.widget.TabLayout-->
                <!--android:id="@+id/tab_layout_info"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="33dp"-->
                <!--style="@style/TabLayoutStyle"-->
                <!--/>-->
        <!--style="@style/TabLayoutTextAppearance"-->
        <include layout="@layout/content_recycler_view"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <!--<android.support.v4.view.ViewPager-->
    <!--android:id="@+id/view_pager_bottom_navigation"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->

</LinearLayout>