<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.example.health_community.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"

        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:hintTextAppearance="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                    android:id="@+id/tv_user_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_account"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:maxLines="1"
                    style="@style/MyEditText"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                style="@style/MyEditText"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name"
                    android:imeOptions="actionDone"
                    android:maxLength="20"
                    android:maxLines="1"
                    style="@style/MyEditText"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyEditText"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name_password"
                    android:imeActionId="@integer/action_sign_in"
                    android:imeActionLabel="@string/action_sign_in"

                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    style="@style/MyEditText"
                    android:singleLine="true"/>
                <!--android:imeOptions="actionDone"-->
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/register_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:hintTextAppearance="@style/TextInputLayoutStyle"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/tv_verify"
                        android:layout_width="226dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_verify"
                        android:imeActionId="@integer/action_verify"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:maxLines="1"
                        style="@style/MyEditText"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/verify_code"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    />
                <!--80 38-->
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btn_forgot_password"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/btn_forgot_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimaryDark"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
